fix avatar align

--- a/blocks/profile/__content-wrapper/profile__content-wrapper.css
+++ b/blocks/profile/__content-wrapper/profile__content-wrapper.css
@@ -1,8 +1,9 @@
 .profile__content-wrapper {
 	grid-area: content;
+	margin: 0 auto;
 	width: 100%;
 	display: flex;
-	justify-content: flex-end;
+	justify-content: center;
 	margin-bottom: 36px;
 	margin-right: 38px;
 }
